[gd_scene load_steps=11 format=2]

[ext_resource path="res://world/backgrounds/3SpaceScroll.tscn" type="PackedScene" id=1]
[ext_resource path="res://world/GUI/fonts/FutilePro.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://world/GUI/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://music sounds/melancholia-940.mp3" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 35
outline_color = Color( 0.231373, 0.223529, 0.262745, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 2 )

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="JourneyLabel" type="Label" parent="."]
margin_left = 104.0
margin_top = 64.0
margin_right = 658.0
margin_bottom = 173.0
custom_fonts/font = SubResource( 1 )
text = "JOURNEY TO SPACE
"
align = 1

[node name="BulletLabel" type="Label" parent="."]
margin_left = 253.0
margin_top = 112.0
margin_right = 507.0
margin_bottom = 139.0
custom_fonts/font = SubResource( 2 )
text = "A Bullet Hell Game"
align = 1

[node name="NewButton" type="Button" parent="."]
margin_left = 256.0
margin_top = 264.0
margin_right = 512.0
margin_bottom = 302.0
custom_fonts/font = SubResource( 3 )
text = "START GAME"

[node name="ShopButton" type="Button" parent="."]
margin_left = 256.0
margin_top = 392.0
margin_right = 512.0
margin_bottom = 430.0
custom_fonts/font = SubResource( 4 )
text = "SHOP"

[node name="QuitButton" type="Button" parent="."]
margin_left = 256.0
margin_top = 520.0
margin_right = 512.0
margin_bottom = 558.0
custom_fonts/font = SubResource( 5 )
text = "QUIT GAME"

[node name="CredLabel" type="Label" parent="."]
margin_left = 320.0
margin_top = 976.0
margin_right = 450.0
margin_bottom = 994.0
custom_fonts/font = SubResource( 6 )
text = "made by T.K.S"

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="pressed" from="NewButton" to="." method="_on_NewButton_pressed"]
[connection signal="pressed" from="ShopButton" to="." method="_on_ShopButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
